Fix some more issues with shuffled BN.

--- a/notebooks/model_conversion.ipynb
+++ b/notebooks/model_conversion.ipynb
@@ -10,33 +10,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-03-19 11:31:22,865 - kedro.ipython - INFO - Resolved project path as: /home/daniel/git/self-supervised-learning.\n",
+      "2024-03-20 09:37:24,509 - kedro.ipython - INFO - Resolved project path as: /home/daniel/git/self-supervised-learning.\n",
       "To set a different path, run '%reload_kedro <project_root>'\n",
-      "2024-03-19 11:31:22,888 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/framework/startup.py:99: KedroDeprecationWarning: project_version in pyproject.toml is deprecated, use kedro_init_version instead\n",
+      "2024-03-20 09:37:24,526 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/framework/startup.py:99: KedroDeprecationWarning: project_version in pyproject.toml is deprecated, use kedro_init_version instead\n",
       "  warnings.warn(\n",
       "\n",
-      "2024-03-19 11:31:22,998 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/framework/session/session.py:267: KedroDeprecationWarning: TemplatedConfigLoader will be deprecated in Kedro 0.19. Please use the OmegaConfigLoader instead. To consult the documentation for OmegaConfigLoader, see here: https://docs.kedro.org/en/stable/configuration/advanced_configuration.html#omegaconfigloader\n",
+      "2024-03-20 09:37:24,626 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/framework/session/session.py:267: KedroDeprecationWarning: TemplatedConfigLoader will be deprecated in Kedro 0.19. Please use the OmegaConfigLoader instead. To consult the documentation for OmegaConfigLoader, see here: https://docs.kedro.org/en/stable/configuration/advanced_configuration.html#omegaconfigloader\n",
       "  warnings.warn(\n",
       "\n",
-      "2024-03-19 11:31:23,022 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/io/__init__.py:44: KedroDeprecationWarning: 'AbstractDataSet' has been renamed to 'AbstractDataset', and the alias will be removed in Kedro 0.19.0\n",
+      "2024-03-20 09:37:24,650 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/io/__init__.py:44: KedroDeprecationWarning: 'AbstractDataSet' has been renamed to 'AbstractDataset', and the alias will be removed in Kedro 0.19.0\n",
       "  return getattr(kedro.io.core, name)\n",
       "\n",
-      "2024-03-19 11:31:23,022 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/io/__init__.py:44: KedroDeprecationWarning: 'AbstractVersionedDataSet' has been renamed to 'AbstractVersionedDataset', and the alias will be removed in Kedro 0.19.0\n",
+      "2024-03-20 09:37:24,651 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/io/__init__.py:44: KedroDeprecationWarning: 'AbstractVersionedDataSet' has been renamed to 'AbstractVersionedDataset', and the alias will be removed in Kedro 0.19.0\n",
       "  return getattr(kedro.io.core, name)\n",
       "\n",
-      "2024-03-19 11:31:23,023 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/io/partitioned_dataset.py:200: KedroDeprecationWarning: 'PartitionedDataset' has been moved to `kedro-datasets` and will be removed in Kedro 0.19.0.\n",
+      "2024-03-20 09:37:24,652 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/io/partitioned_dataset.py:200: KedroDeprecationWarning: 'PartitionedDataset' has been moved to `kedro-datasets` and will be removed in Kedro 0.19.0.\n",
       "  warnings.warn(\n",
       "\n",
-      "2024-03-19 11:31:23,149 - kedro.ipython - INFO - Kedro project Self-Supervised Learning\n",
-      "2024-03-19 11:31:23,150 - kedro.ipython - INFO - Defined global variable 'context', 'session', 'catalog' and 'pipelines'\n",
-      "2024-03-19 11:31:23,157 - kedro.io.data_catalog - INFO - Loading data from 'yolov8_l_description' (YAMLDataSet)...\n"
+      "2024-03-20 09:37:24,781 - kedro.ipython - INFO - Kedro project Self-Supervised Learning\n",
+      "2024-03-20 09:37:24,781 - kedro.ipython - INFO - Defined global variable 'context', 'session', 'catalog' and 'pipelines'\n",
+      "2024-03-20 09:37:24,788 - kedro.io.data_catalog - INFO - Loading data from 'yolov8_l_description' (YAMLDataSet)...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-03-19 11:31:23.702 | INFO     | self_supervised.pipelines.train_simclr.nodes:<module>:43 - Using cpu device.\n"
+      "2024-03-20 09:37:25.427 | INFO     | self_supervised.pipelines.train_simclr.nodes:<module>:43 - Using cpu device.\n"
      ]
     }
    ],
@@ -46,7 +46,7 @@
     "%reload_kedro\n",
     "# trained_model = catalog.load(\"trained_model\", version=\"2023-03-29T11.37.00.000Z\")\n",
     "model_config = catalog.load(\"yolov8_l_description\")\n",
-    "trained_model = torch.load(\"../checkpoints/checkpoint_12684.pt\", map_location=\"cpu\")"
+    "trained_model = torch.load(\"../checkpoints/checkpoint_29898.pt\", map_location=\"cpu\")"
    ]
   },
   {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "c38d423e-318d-4eb5-8233-54be41e27d1b",
    "metadata": {},
    "outputs": [],
@@ -130,14 +130,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "454a7de2-bacc-4b7c-bb1a-c74d6a9178f7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "\n",
-    "torch.save({\"model\": new_yolo}, \"../yolov8l_ssl_moco_multi.pt\")"
+    "torch.save({\"model\": new_yolo}, \"../yolov8l_ssl_moco_single.pt\")"
    ]
   },
   {
