--- a/notebooks/model_conversion.ipynb
+++ b/notebooks/model_conversion.ipynb
@@ -10,33 +10,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-03-21 16:31:15,078 - kedro.ipython - INFO - Resolved project path as: /home/daniel/git/self-supervised-learning.\n",
+      "2024-04-10 12:51:02,052 - kedro.ipython - INFO - Resolved project path as: /home/daniel/git/self-supervised-learning.\n",
       "To set a different path, run '%reload_kedro <project_root>'\n",
-      "2024-03-21 16:31:15,092 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/framework/startup.py:99: KedroDeprecationWarning: project_version in pyproject.toml is deprecated, use kedro_init_version instead\n",
+      "2024-04-10 12:51:02,066 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/framework/startup.py:99: KedroDeprecationWarning: project_version in pyproject.toml is deprecated, use kedro_init_version instead\n",
       "  warnings.warn(\n",
       "\n",
-      "2024-03-21 16:31:15,194 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/framework/session/session.py:267: KedroDeprecationWarning: TemplatedConfigLoader will be deprecated in Kedro 0.19. Please use the OmegaConfigLoader instead. To consult the documentation for OmegaConfigLoader, see here: https://docs.kedro.org/en/stable/configuration/advanced_configuration.html#omegaconfigloader\n",
+      "2024-04-10 12:51:02,172 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/framework/session/session.py:267: KedroDeprecationWarning: TemplatedConfigLoader will be deprecated in Kedro 0.19. Please use the OmegaConfigLoader instead. To consult the documentation for OmegaConfigLoader, see here: https://docs.kedro.org/en/stable/configuration/advanced_configuration.html#omegaconfigloader\n",
       "  warnings.warn(\n",
       "\n",
-      "2024-03-21 16:31:15,235 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/io/__init__.py:44: KedroDeprecationWarning: 'AbstractDataSet' has been renamed to 'AbstractDataset', and the alias will be removed in Kedro 0.19.0\n",
+      "2024-04-10 12:51:02,196 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/io/__init__.py:44: KedroDeprecationWarning: 'AbstractDataSet' has been renamed to 'AbstractDataset', and the alias will be removed in Kedro 0.19.0\n",
       "  return getattr(kedro.io.core, name)\n",
       "\n",
-      "2024-03-21 16:31:15,236 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/io/__init__.py:44: KedroDeprecationWarning: 'AbstractVersionedDataSet' has been renamed to 'AbstractVersionedDataset', and the alias will be removed in Kedro 0.19.0\n",
+      "2024-04-10 12:51:02,197 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/io/__init__.py:44: KedroDeprecationWarning: 'AbstractVersionedDataSet' has been renamed to 'AbstractVersionedDataset', and the alias will be removed in Kedro 0.19.0\n",
       "  return getattr(kedro.io.core, name)\n",
       "\n",
-      "2024-03-21 16:31:15,236 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/io/partitioned_dataset.py:200: KedroDeprecationWarning: 'PartitionedDataset' has been moved to `kedro-datasets` and will be removed in Kedro 0.19.0.\n",
+      "2024-04-10 12:51:02,198 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/io/partitioned_dataset.py:200: KedroDeprecationWarning: 'PartitionedDataset' has been moved to `kedro-datasets` and will be removed in Kedro 0.19.0.\n",
       "  warnings.warn(\n",
       "\n",
-      "2024-03-21 16:31:15,362 - kedro.ipython - INFO - Kedro project Self-Supervised Learning\n",
-      "2024-03-21 16:31:15,362 - kedro.ipython - INFO - Defined global variable 'context', 'session', 'catalog' and 'pipelines'\n",
-      "2024-03-21 16:31:15,369 - kedro.io.data_catalog - INFO - Loading data from 'yolov8_l_description' (YAMLDataSet)...\n"
+      "2024-04-10 12:51:02,334 - kedro.ipython - INFO - Kedro project Self-Supervised Learning\n",
+      "2024-04-10 12:51:02,335 - kedro.ipython - INFO - Defined global variable 'context', 'session', 'catalog' and 'pipelines'\n",
+      "2024-04-10 12:51:02,341 - kedro.io.data_catalog - INFO - Loading data from 'yolov8_l_description' (YAMLDataSet)...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-03-21 16:31:16.032 | INFO     | self_supervised.pipelines.train_simclr.nodes:<module>:43 - Using cpu device.\n"
+      "2024-04-10 12:51:03.022 | INFO     | self_supervised.pipelines.train_simclr.nodes:<module>:43 - Using cpu device.\n"
      ]
     }
    ],
@@ -46,12 +46,12 @@
     "%reload_kedro\n",
     "# trained_model = catalog.load(\"trained_model\", version=\"2023-03-29T11.37.00.000Z\")\n",
     "model_config = catalog.load(\"yolov8_l_description\")\n",
-    "trained_model = torch.load(\"../checkpoints/checkpoint_29898.pt\", map_location=\"cpu\")"
+    "trained_model = torch.load(\"../checkpoints/checkpoint_29920.pt\", map_location=\"cpu\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "0d4dda4c-0ab2-40a5-99f9-24c3767ebcf1",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c38d423e-318d-4eb5-8233-54be41e27d1b",
    "metadata": {},
    "outputs": [],
@@ -130,14 +130,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "454a7de2-bacc-4b7c-bb1a-c74d6a9178f7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "\n",
-    "torch.save({\"model\": new_yolo}, \"../yolov8l_ssl_moco_multi.pt\")"
+    "torch.save({\"model\": new_yolo}, \"../yolov8l_ssl_moco_cc.pt\")"
    ]
   },
   {
