--- a/notebooks/model_conversion.ipynb
+++ b/notebooks/model_conversion.ipynb
@@ -10,26 +10,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-04-18 16:09:03,244 - kedro.ipython - INFO - Resolved project path as: /home/daniel/git/self-supervised-learning.\n",
+      "2024-04-22 10:16:33,037 - kedro.ipython - INFO - Resolved project path as: /home/daniel/git/self-supervised-learning.\n",
       "To set a different path, run '%reload_kedro <project_root>'\n",
-      "2024-04-18 16:09:03,252 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/framework/startup.py:99: KedroDeprecationWarning: project_version in pyproject.toml is deprecated, use kedro_init_version instead\n",
+      "2024-04-22 10:16:33,054 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/framework/startup.py:99: KedroDeprecationWarning: project_version in pyproject.toml is deprecated, use kedro_init_version instead\n",
       "  warnings.warn(\n",
       "\n",
-      "2024-04-18 16:09:03,354 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/framework/session/session.py:267: KedroDeprecationWarning: TemplatedConfigLoader will be deprecated in Kedro 0.19. Please use the OmegaConfigLoader instead. To consult the documentation for OmegaConfigLoader, see here: https://docs.kedro.org/en/stable/configuration/advanced_configuration.html#omegaconfigloader\n",
+      "2024-04-22 10:16:33,168 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/framework/session/session.py:267: KedroDeprecationWarning: TemplatedConfigLoader will be deprecated in Kedro 0.19. Please use the OmegaConfigLoader instead. To consult the documentation for OmegaConfigLoader, see here: https://docs.kedro.org/en/stable/configuration/advanced_configuration.html#omegaconfigloader\n",
       "  warnings.warn(\n",
       "\n",
-      "2024-04-18 16:09:03,377 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/io/__init__.py:44: KedroDeprecationWarning: 'AbstractDataSet' has been renamed to 'AbstractDataset', and the alias will be removed in Kedro 0.19.0\n",
+      "2024-04-22 10:16:33,196 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/io/__init__.py:44: KedroDeprecationWarning: 'AbstractDataSet' has been renamed to 'AbstractDataset', and the alias will be removed in Kedro 0.19.0\n",
       "  return getattr(kedro.io.core, name)\n",
       "\n",
-      "2024-04-18 16:09:03,378 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/io/__init__.py:44: KedroDeprecationWarning: 'AbstractVersionedDataSet' has been renamed to 'AbstractVersionedDataset', and the alias will be removed in Kedro 0.19.0\n",
+      "2024-04-22 10:16:33,196 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/io/__init__.py:44: KedroDeprecationWarning: 'AbstractVersionedDataSet' has been renamed to 'AbstractVersionedDataset', and the alias will be removed in Kedro 0.19.0\n",
       "  return getattr(kedro.io.core, name)\n",
       "\n",
-      "2024-04-18 16:09:03,379 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/io/partitioned_dataset.py:200: KedroDeprecationWarning: 'PartitionedDataset' has been moved to `kedro-datasets` and will be removed in Kedro 0.19.0.\n",
+      "2024-04-22 10:16:33,197 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/io/partitioned_dataset.py:200: KedroDeprecationWarning: 'PartitionedDataset' has been moved to `kedro-datasets` and will be removed in Kedro 0.19.0.\n",
       "  warnings.warn(\n",
       "\n",
-      "2024-04-18 16:09:03,509 - kedro.ipython - INFO - Kedro project Self-Supervised Learning\n",
-      "2024-04-18 16:09:03,510 - kedro.ipython - INFO - Defined global variable 'context', 'session', 'catalog' and 'pipelines'\n",
-      "2024-04-18 16:09:03,517 - kedro.io.data_catalog - INFO - Loading data from 'yolov8_l_description' (YAMLDataSet)...\n"
+      "2024-04-22 10:16:33,335 - kedro.ipython - INFO - Kedro project Self-Supervised Learning\n",
+      "2024-04-22 10:16:33,335 - kedro.ipython - INFO - Defined global variable 'context', 'session', 'catalog' and 'pipelines'\n",
+      "2024-04-22 10:16:33,342 - kedro.io.data_catalog - INFO - Loading data from 'yolov8_l_description' (YAMLDataSet)...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-04-22 10:16:33.943 | INFO     | self_supervised.pipelines.train_simclr.nodes:<module>:44 - Using cpu device.\n"
      ]
     }
    ],
@@ -39,7 +46,7 @@
     "%reload_kedro\n",
     "# trained_model = catalog.load(\"trained_model\", version=\"2023-03-29T11.37.00.000Z\")\n",
     "model_config = catalog.load(\"yolov8_l_description\")\n",
-    "trained_model = torch.load(\"../checkpoints/checkpoint_52360.pt\", map_location=\"cpu\")"
+    "trained_model = torch.load(\"../checkpoints/checkpoint_29920.pt\", map_location=\"cpu\")"
    ]
   },
   {
@@ -48,13 +55,6 @@
    "id": "0d4dda4c-0ab2-40a5-99f9-24c3767ebcf1",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-04-18 16:09:05.961 | INFO     | self_supervised.pipelines.train_simclr.nodes:<module>:44 - Using cpu device.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "c38d423e-318d-4eb5-8233-54be41e27d1b",
    "metadata": {},
    "outputs": [],
@@ -130,14 +130,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "454a7de2-bacc-4b7c-bb1a-c74d6a9178f7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "\n",
-    "torch.save({\"model\": new_yolo}, \"../yolov8l_ssl_simclr_cc.pt\")"
+    "torch.save({\"model\": new_yolo}, \"../yolov8l_ssl_moco_cc.pt\")"
    ]
   },
   {
